--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
 
-<div class="container">
-  <div id="lightstick" class="lightstick on">
-    <div class="bulb"></div>
-    <div class="stick"></div>
-  </div>
+<img
+  id="lightstick"
+  src="lightstick.png"
+  class="on"
+  alt="Lightstick"
+/>
 
-  <button id="btn">POWER</button>
-</div>
+<button id="btn">POWER</button>
 
 <script src="script.js"></script>
 </body>
