--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My Lightstick</title>
+  <title>Lightstick</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="on">
 
-<img
-  id="lightstick"
-  src="lightstick.png"
-  class="on"
-  alt="Lightstick"
-/>
-
+<img id="lightstick" src="on.png" alt="Lightstick">
 <button id="btn">POWER</button>
 
 <script src="script.js"></script>
