--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="on">
 
-<img id="lightstick" src="full front on.png" alt="Lightstick">
+<img id="lightstick" src="full front off.png" alt="Lightstick">
 <button id="btn">POWER</button>
 
 <script src="script.js"></script>
