--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Lightstick</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="on">
+<body>
 
 <img id="lightstick" src="full front off.png" alt="Lightstick">
 <button id="btn">POWER</button>
