--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 </head>
 <body>
 
-<img id="lightstick" src="full front off.png" alt="Lightstick">
-<button id="btn">POWER</button>
+<h1 class="title">Our Dream Lightstick</h1>
 
-<script src="script.js"></script>
+  <div class="viewer">
+    <button id="prev" class="nav left">◀</button>
+
+    <img id="lightstick" alt="Lightstick">
+
+    <button id="next" class="nav right">▶</button>
+  </div>
+
+  <button id="btn">POWER</button>
+
+  <script src="script.js"></script>
 </body>
 </html>
