--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lightstick</title>
+  <title>Our Dream Lightstick</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<h1 class="title">Our Dream Lightstick</h1>
+  <h1 class="title">Our Dream Lightstick</h1>
 
   <div class="viewer">
-    <button id="prev" class="nav left">◀</button>
+    <button id="prev" class="nav">◀</button>
 
     <img id="lightstick" alt="Lightstick">
 
-    <button id="next" class="nav right">▶</button>
+    <button id="next" class="nav">▶</button>
   </div>
 
   <button id="btn">POWER</button>
