--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Dream Lightstick</title>
+  
+  <!-- favicon browser (dark / light) -->
+  <link rel="icon" href="favicon-light.png" media="(prefers-color-scheme: light)">
+  <link rel="icon" href="favicon-dark.png" media="(prefers-color-scheme: dark)">
+
+  <!-- apple home screen icon (dark / light) -->
+  <link rel="apple-touch-icon" href="apple-light.png" media="(prefers-color-scheme: light)">
+  <link rel="apple-touch-icon" href="apple-dark.png" media="(prefers-color-scheme: dark)">
+
   <link rel="stylesheet" href="style.css">
 </head>
 
