--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <img
+  src="logo-off.png"
+  alt="Our Dream Logo"
+  class="logo"
+  id="logo"
+  />
   <title>Our Dream Lightstick</title>
   
   <!-- favicon browser (dark / light) -->
